--- a/src/teaeli/AdminPannel.form
+++ b/src/teaeli/AdminPannel.form
@@ -468,7 +468,7 @@
                                               <Component id="searchItemBtn" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
-                                      <EmptySpace pref="554" max="32767" attributes="0"/>
+                                      <EmptySpace pref="520" max="32767" attributes="0"/>
                                       <Component id="addItemBtn" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" attributes="0">
@@ -517,7 +517,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Segoe UI" size="14" style="0"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Start typing item name to search"/>
+                        <Property name="text" type="java.lang.String" value="Start typing ingredient name to search"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JButton" name="searchItemBtn">
@@ -533,7 +533,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Segoe UI" size="14" style="0"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Add New Item"/>
+                        <Property name="text" type="java.lang.String" value="Add New Ingredient"/>
                       </Properties>
                       <Events>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addItemBtnActionPerformed"/>
@@ -550,7 +550,7 @@
                           <Properties>
                             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                               <Table columnCount="3" rowCount="21">
-                                <Column editable="false" title="Item Name" type="java.lang.Object"/>
+                                <Column editable="false" title="Ingredient Name" type="java.lang.Object"/>
                                 <Column editable="false" title="Supplier" type="java.lang.Object"/>
                                 <Column editable="false" title="Unit Price" type="java.lang.Object"/>
                               </Table>
@@ -608,7 +608,7 @@
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Group type="102" attributes="0">
                                                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                                                  <Component id="jLabel10" pref="69" max="32767" attributes="0"/>
+                                                  <Component id="jLabel10" max="32767" attributes="0"/>
                                               </Group>
                                               <Group type="102" alignment="1" attributes="0">
                                                   <EmptySpace max="32767" attributes="0"/>
@@ -662,7 +662,7 @@
                         <Component class="javax.swing.JLabel" name="jLabel10">
                           <Properties>
                             <Property name="horizontalAlignment" type="int" value="4"/>
-                            <Property name="text" type="java.lang.String" value="Item  Name"/>
+                            <Property name="text" type="java.lang.String" value="Ingredient  Name"/>
                           </Properties>
                         </Component>
                         <Component class="javax.swing.JButton" name="updateItemCancelBtn">
@@ -783,8 +783,8 @@
                           <Properties>
                             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                               <Table columnCount="3" rowCount="20">
-                                <Column editable="false" title="Product Code" type="java.lang.Object"/>
-                                <Column editable="false" title="Product Name" type="java.lang.Object"/>
+                                <Column editable="false" title="Blend Code" type="java.lang.Object"/>
+                                <Column editable="false" title="Blend Name" type="java.lang.Object"/>
                                 <Column editable="false" title="Base Composition" type="java.lang.Object"/>
                               </Table>
                             </Property>
@@ -801,26 +801,6 @@
                                   <Renderer/>
                                 </Column>
                                 <Column maxWidth="300" minWidth="200" prefWidth="-1" resizable="true">
-                                  <Title/>
-                                  <Editor/>
-                                  <Renderer/>
-                                </Column>
-                                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                                  <Title/>
-                                  <Editor/>
-                                  <Renderer/>
-                                </Column>
-                                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                                  <Title/>
-                                  <Editor/>
-                                  <Renderer/>
-                                </Column>
-                                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                                  <Title/>
-                                  <Editor/>
-                                  <Renderer/>
-                                </Column>
-                                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                                   <Title/>
                                   <Editor/>
                                   <Renderer/>
@@ -850,7 +830,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Segoe UI" size="14" style="0"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Start typing product name to search"/>
+                        <Property name="text" type="java.lang.String" value="Start typing blend name to search"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JButton" name="addProductBtn">
